--- a/public/package.json
+++ b/public/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "sweetalert": "^2.1.0",
+    "sweetalert2": "^7.15.1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
