--- a/public/package.json
+++ b/public/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "bootstrap-select": "^1.12.4",
     "sweetalert": "^2.1.0",
     "sweetalert2": "^7.15.1",
     "vue": "^2.5.2",
