--- a/public/package.json
+++ b/public/package.json
@@ -16,6 +16,7 @@
     "sweetalert2": "^7.15.1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
+    "vue-select": "^2.4.0",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
