--- a/public/package.json
+++ b/public/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "axios": "^0.18.0",
     "bootstrap-select": "^1.12.4",
+    "npm": "^5.7.1",
     "sweetalert": "^2.1.0",
     "sweetalert2": "^7.15.1",
     "vue": "^2.5.2",
+    "vue-rate-it": "^2.1.0",
     "vue-router": "^3.0.1",
     "vue-select": "^2.4.0",
     "vuex": "^3.0.1"
