--- a/public/package.json
+++ b/public/package.json
@@ -15,6 +15,7 @@
     "npm": "^5.7.1",
     "sweetalert": "^2.1.0",
     "sweetalert2": "^7.15.1",
+    "v-calendar": "^0.8.0",
     "vue": "^2.5.2",
     "vue-rate-it": "^2.1.0",
     "vue-router": "^3.0.1",
