--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.18.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.2",
-    "connect-mongodb-session": "^2.0.0",
+    "connect-mongodb-session": "^1.4.0",
     "cors": "^2.8.4",
-    "express": "^4.16.3",
+    "express": "^4.16.2",
     "express-session": "^1.15.6",
-    "mongoose": "^5.0.10"
+    "mongoose": "^5.0.8"
   },
   "engines": {
     "node": "^8.0.0",
