--- a/public/package.json
+++ b/public/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "bootstrap-select": "^1.12.4",
+    "moment": "^2.22.0",
     "npm": "^5.7.1",
     "sweetalert": "^2.1.0",
     "sweetalert2": "^7.15.1",
